# libhobby3d

./: .gitignore  Android.mk  Makefile
High3d/: Body.cpp  DAE.cpp  DAE.h  GLM.cpp  GLM.h  H3D.cpp  H3D.h  Lights.cpp  Lights.h  Makefile  Shadows.cpp  Shadows.h  Tex.cpp  Text.cpp  Text.h  jhobby3d.i  jms3d.i  jms3d_wrap.cxx  ms3d.cpp  ms3d.h  oldms3d.i  pyhobby3d.i  shader.cpp  shader.h  tags
High3d/shaders/: GLES20_frag.shader
Low3d/: CMakeLists.txt  DAEMesh.cpp  DAEMesh.h  H3DFile.cpp  H3DFile.h  MS3DFile.cpp  MS3DFile.h  MS3DFileIO.cpp  Makefile  Shader.cpp  Textures.cpp  Textures.h  cmake_install.cmake  daeTest  daeTest.cpp  install_manifest.txt  optimizations.cpp  tags
example_shaders/: GLES20_vert.shader  h3d_anim_vert.shader
