project (hobby3dLow)
cmake_minimum_required(VERSION 3.6)
set( hobby3dLow_SRCS MS3DFile.cpp optimizations.cpp Shader.cpp MS3DFileIO.cpp Textures.cpp)
set( hobby3dLow_PUBLIC_HEADERS MS3DFile.h Textures.h Shader.h)
add_library (hobby3dLow SHARED ${hobby3dLow_SRCS})
target_include_directories (hobby3dLow PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#install(TARGETS ms3d LIBRARY DESTINATION "../lib")
#install(FILES ${ms3d_PUBLIC_HEADERS} DESTINATION "../include/ms3d")
